--- a/projeto/index.html
+++ b/projeto/index.html
@@ -102,7 +102,7 @@
             </p>
         </div>
         <hr>
-        <h2>Semantica</h2>
+        <h2>semantica</h2>
         <p>diferente do html 4, o html 5 foca mais em significados na ultilização das funções, exemplo: <br>
             Eu moro na
         <address>Rua Adenaldo Ferreto - N39 - Parque Lagoa Subae</address><br> Nesse caso vemos que tem uma tag que
